# dependabot-demo

./: Cargo.toml
.github/: dependabot.yml
adder/: Cargo.toml
javascript/: package-lock.json
