[workspace]
resolver = "2"
members = ["adder"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.86"
antithesis_sdk = "0.1.5"
arrow-array = "54.2.0"
arrow-schema = "54.2.0"
assert_ok = "1.0.2"
async-channel = "2.3"
async_logger = "0.3.3"
async-stream = "0.3.5"
async-trait = "0.1"
aws-config = "1.5.10"
aws-sdk-s3 = "1.61.0"
aws-sdk-sqs = "1.62.0"
backtrace = "0.3"
base64 = "0.22.1"
bincode = "1.3"
bincode2 = "2.0.1"
bitflags = { version = "2.6.0", features = ["serde"] }
built = "0.7.7"
byteorder = "1.5.0"
bytes = "1.7.2"
chrono = { features = ["serde"], version = "0.4.38" }
clap = { version = "4.5.16", features = ["derive"] }
console-subscriber = { version = "0.4.1" }
criterion = "0.5"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5.15"
ctor = "0.4.2"
dashmap = "6.1.0"
derive_builder = { version = "0.20.2" }
derive_more = { version = "1.0.0", features = [
    "add",
    "display",
    "from",
    "into",
] }
educe = "0.6"
enclose = "1.2.0"
failsafe = "1.3.0"
figment = { version = "0.10.19", features = ["env", "yaml"] }
flate2 = "1.0.34"
flume = { version = "0.11.1", default-features = false, features = ["async"] }
fork = "0.2.0"
futures = "0.3"
glob = "0.3.2"
http = "1.2.0"
humantime = "2.2.0"
humantime-serde = "1.1.1"
hyper = "0.14.31"
io_tee = "0.1.1"
itertools = "0.13.0"
indexmap = "2.6.0"
jzon = "0.12.5"
kube = { version = "0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
lazy_static = "1.3"
latches = { version = "0.2.0", default-features = false, features = ["task"] }
lockfree = "0.5.1"
md5 = "0.7.0"
metrics = "0.24.0"
metrics-exporter-prometheus = { version = "0.17.0", features = [
    "http-listener",
] }
metrics-util = "0.19.1"
mockall = "0.11.3"
mock_instant = "0.5.1"
mongodb = "3.1.0"
object_store = "0.11.1"
opentelemetry = "0.28.0"
opentelemetry-proto = { version = "0.28.0", features = [
    "trace",
    "gen-tonic-messages",
] }
opentelemetry-otlp = { version = "0.28.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.28.0", features = [
    "trace",
    "metrics",
    "rt-tokio",
] }
parking_lot = "0.12.3"
parquet = "54.2.0"
pin-project-lite = "0.2.15"
proc_sys_parser = "0.1.22"
prometheus-parse = "0.2.5"
pprof = { version = "0.14.0" }
prost = "0.11"
prost-types = "0.11"
protobuf = "2.8"
quote = { version = "1.0.40", features = ["proc-macro"] }
raft = { version = "0.7.0", features = [
    "prost-codec",
], default-features = false }
raft-engine = { version = "0.4.2", default-features = false }
rand = "0.9.1"
rand_xoshiro = "0.7.0"
regex = "1.11.1"
ring = "0.17.8"
rstest = "0.23.0"
tokio-rustls = "0.26.2"
scopeguard = "1.2"
saphyr = "0.0.3"
serial_test = "3.2.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_with = { version = "3.12.0" }
serde_json = "1.0"
sha2 = { version = "0.10", features = ["asm"] }
slog = "2.7.0"
snafu = "0.8.4"
snap = "1.1.1"
strum = "0.24.1"
strum_macros = "0.24.3"
syn = { version = "2.0.101", features = ["full"] }
sysinfo = "0.33.1"
tempfile = "3.13.0"
thiserror = "1.0.63"
tokio = { version = "1.44.2", features = ["full"] }
tokio-metrics = { version = "0.3.1", default-features = false }
tokio-stream = "0.1.15"
tonic = "0.9"
tonic-build = { version = "0.9", features = ["prost"] }
tonic-reflection = "0.9"
tokio-util = { version = "0.7.12", features = ["rt"] }
tower = "0.4.13"
tracing = "0.1.32"
tracing-appender = "0.2.3"
tracing-core = "0.1.32"
tracing-opentelemetry = "0.29.0"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.15.1", features = ["v4"] }
varinteger = "1.0.6"
